svc_helloworld_go.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-go
  name: helloworld-go
  namespace: myproject   
spec:
  selector:       
    deploymentconfig: helloworld-go
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 9999
